--- a/src/LSI/MarketBundle/Resources/views/Registration/register_user.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/Registration/register_user.html.twig
@@ -13,12 +13,36 @@
             </div>
         </div>
     </div>
-    <div class=" col-xs-6 col-md-6 col-lg-6">
+    <div class=" col-xs-6 col-md-6 col-lg-6"> {#Block de gauche#}
         <div class="form-group">
             {{ form_label(form.nom, 'Nom') }}
             {{ form_errors(form.nom) }}
             {{ form_widget(form.nom) }}
         </div>
+        {# Affiche l'input prénom pour l'inscription d'un administré #}
+        {% if form.administre is defined %}
+            <div class="form-group" id="adminis" style="display: none;">
+                <div class="form-group">
+                    {{ form_label(form.administre.prenom, 'Votre prénom', {'required': false}) }}
+                    {{ form_widget(form.administre.prenom, {'required': false, 'attr' : {'placeholder' : 'Votre/vos prénom(s)'}}) }}
+                </div>
+            </div>
+        {% endif %}
+
+        {# Affiche les inputs description et service pour l'inscription d'une mairie #}
+        {% if form.mairie is defined %}
+            <div class="form-group" id="mairie" style="display: none;">
+                <div class="form-group">
+                    {{ form_label(form.mairie.description, 'Description de la mairie', {'required': false}) }}
+                    {{ form_widget(form.mairie.description, {'required': false, 'attr' : {'placeholder' : 'La description de votre mairie'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.mairie.service, 'Service de la mairie', {'required': false}) }}
+                    {{ form_widget(form.mairie.service, {'required': false, 'attr' : {'placeholder' : 'Les services proposés par votre mairie'}}) }}
+                </div>
+            </div>
+        {% endif %}
+
         <div class="form-group">
             {{ form_label(form.username, 'Nom d\'utilisateur') }}
             {{ form_errors(form.username) }}
@@ -39,32 +63,46 @@
             {{ form_errors(form.plainPassword.second) }}
             {{ form_widget(form.plainPassword.second, {'attr' : {'placeholder' : 'Rétapez le mot de passe'}}) }}
         </div>
-    </div>
-
-    <div class="col-xs-6 col-md-6 col-lg-6">
         <div class="form-group">
             {{ form_label(form.telephone) }}
             {{ form_errors(form.telephone) }}
             {{ form_widget(form.telephone, {'attr' : {'placeholder' : 'Votre numéro de téléphone'}}) }}
         </div>
-        {#<div class="form-group">
-            {{ form_label(form.adresse) }}
-            {{ form_errors(form.adresse) }}
-            {{ form_widget(form.adresse, {'attr' : {'placeholder' : 'Votre adresse'}}) }}
-            #}{#{{ form_widget(form.validate, {'label': 'Valider l\'adresse', 'attr': {'class':'btn btn-info'}}) }}#}{#
+    </div>
+
+    <div class="col-xs-6 col-md-6 col-lg-6">
+        <div class="form-group">
+            {{ form_label(form.adresse.pays) }}
+            {{ form_errors(form.adresse.pays) }}
+            {{ form_widget(form.adresse.pays, {'attr' : {'placeholder' : 'Votre adresse'}}) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.ville) }}
-            {{ form_errors(form.ville) }}
-            {{ form_widget(form.ville, {'attr' : {'placeholder' : 'Votre ville'}}) }}
+            {{ form_label(form.adresse.ville) }}
+            {{ form_errors(form.adresse.ville) }}
+            {{ form_widget(form.adresse.ville, {'attr' : {'placeholder' : 'Votre ville'}}) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.pays, 'Votre pays') }}
-            {{ form_errors(form.pays) }}
-            {{ form_widget(form.pays, {'attr' : {'placeholder' : 'Votre pays'}}) }}
-        </div>#}
+            {{ form_label(form.adresse.rue, 'Numéro de rue') }}
+            {{ form_errors(form.adresse.rue) }}
+            {{ form_widget(form.adresse.rue, {'attr' : {'placeholder' : 'Numéro de rue'}}) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.adresse.codePostal, 'Code postal') }}
+            {{ form_errors(form.adresse.codePostal) }}
+            {{ form_widget(form.adresse.codePostal, {'attr' : {'placeholder' : 'Code postal'}}) }}
+        </div>
+
+        {% if form.mairie is defined %}
+            <div class="form-group" id="maire" style="display: none;">
+                {{ form_label(form.mairie.epi, 'EPCI') }}
+                {{ form_errors(form.mairie.epi) }}
+                {{ form_widget(form.mairie.epi, {'disabled' : 'disabled', 'attr':{'placeholder':'Votre EPCI'}}) }}
+            </div>
+        {% endif %}
+
         <div class="form-group">
             {{ form_label(form.indicatif, 'Indicatif de votre pays') }}
             {{ form_errors(form.indicatif) }}
@@ -74,41 +112,16 @@
             {{ form_label(form.langue, 'Votre Langue (parlée)') }}
             {{ form_errors(form.langue) }}
             {{ form_widget(form.langue, {'attr' : {'placeholder' : 'Votre langue'}}) }}
-        </div>{##}
-    </div>
-
-    {##}{# form group pour la mairie #}{##}
-    {% if form.mairie is defined %}
-    <div class="col-xs-12 col-md-12 col-lg-12">
-        <div class="form-group" id="mairie" style="display: none;">
-            <div class="form-group">
-                {{ form_label(form.mairie.description, 'Description de la mairie', {'required': false}) }}
-                {{ form_widget(form.mairie.description, {'required': false, 'attr' : {'placeholder' : 'La description de votre mairie'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.mairie.service, 'Service de la mairie', {'required': false}) }}
-                {{ form_widget(form.mairie.service, {'required': false, 'attr' : {'placeholder' : 'Les services proposés par votre mairie'}}) }}
-            </div>
         </div>
+        {% if form.administre is defined %}
+                <div class="form-group" id="administ" style="display: none;">
+                    <div class="form-group">
+                        {{ form_label(form.administre.langueMat, 'Votre langue maternelle', {'required': false}) }}
+                        {{ form_widget(form.administre.langueMat, {'required': false, 'attr' : {'placeholder' : 'Votre langue maternelle'}}) }}
+                    </div>
+                </div>
+        {% endif %}
     </div>
-    {% endif %}
-    {#
-
-    #}{# form group pour l'administre #}
-    {% if form.administre is defined %}
-    <div class="col-xs-12 col-md-12 col-lg-12">
-        <div class="form-group" id="adminis" style="display: none;">
-            <div class="form-group">
-                {{ form_label(form.administre.prenom, 'Votre prénom', {'required': false}) }}
-                {{ form_widget(form.administre.prenom, {'required': false, 'attr' : {'placeholder' : 'Votre/vos prénom(s)'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.administre.langueMat, 'Votre langue maternelle', {'required': false}) }}
-                {{ form_widget(form.administre.langueMat, {'required': false, 'attr' : {'placeholder' : 'Votre langue maternelle'}}) }}
-            </div>
-        </div>
-    </div>
-    {% endif %}
 
     <div class="row ">
         <div class="col-lg-offset-6 col-xs-6 col-md-6 col-lg-6">
