--- a/src/LSI/MarketBundle/Resources/views/layout_mon_espace.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/layout_mon_espace.html.twig
@@ -37,8 +37,11 @@
                 {% endif %}
             </div>
         </div>
+{% endblock volet %}
+
+{% block body %}
     {% block monespace %}
 
     {% endblock monespace %}
+{% endblock body %}
 
-{% endblock volet %}
