--- a/src/LSI/MarketBundle/Resources/views/layout.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/layout.html.twig
@@ -1,4 +1,11 @@
 {% extends '::layout.html.twig' %}
+
+{% block volet %}
+{% if app.user.hasRole('ROLE_SUPER_ADMIN') is defined %}
+    {% include 'LSIMarketBundle::layout_superadmin.html.twig' %}
+{% endif %}
+{% endblock volet %}
+
 {% block body %}
 
     {# On affiche les messages flash que définissent les contrôleurs du bundle #}
@@ -12,8 +19,10 @@
         {% endfor %}
     {% endfor %}
 
+
+
     {# On définit ce block, dans lequel vont venir s'insérer les autres vues du bundle #}
     {% block fos_user_content %}
     {% endblock fos_user_content %}
 
-{% endblock %}
+{% endblock body %}
