modification sur le formulaire d'inscription

--- a/app/Resources/views/layout2.html.twig
+++ b/app/Resources/views/layout2.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
@@ -103,5 +103,5 @@ SUR NOTRE
 </div>
 <button class="_button-13">Recherche avancé</button>
 <button class="_button-14">Definir Proprieté</button>
-
+</body>
 </html>
