--- a/src/LSI/MarketBundle/Resources/views/Registration/register.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/Registration/register.html.twig
@@ -62,7 +62,7 @@
             }
         }
     </script>
-    <script>
+    {#<script>
         $(document).ready(function () {
             var monepci = function () {
                 $.ajax({
@@ -75,5 +75,5 @@
                 })
             }
         })
-    </script>
+    </script>#}
 {% endblock javascripts %}
