--- a/src/LSI/MarketBundle/Resources/views/market/ajouter.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/market/ajouter.html.twig
@@ -33,11 +33,11 @@
                 {{ form_errors(form.regleCond) }}
             </div>
             <div class="col-xs-6 col-md-6 col-lg-6">
-                <div class="form-group">
-                    {#{{ form_label(form.statut) }}#}
+                {#<div class="form-group">
+                    #}{#{{ form_label(form.statut) }}#}{#
                     {{ form_row(form.statut) }}
                 </div>
-                {{ form_errors(form.statut) }}
+                {{ form_errors(form.statut) }}#}
                 <div class="form-group">
                     {#{{ form_label(form.categorie) }}#}
                     {{ form_row(form.categorie) }}
