--- a/src/LSI/MarketBundle/Resources/views/admin/gestion_epci/modifier_epci.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/admin/gestion_epci/modifier_epci.html.twig
@@ -1,15 +1,21 @@
 {% extends 'LSIMarketBundle::monespace.html.twig' %}
 
 {% block monespace %}
-    {% include '@LSIMarket/admin/ajout_epci_content.html.twig' %}
+    {% include '@LSIMarket/admin/gestion_epci/modifier_epci_content.html.twig' %}
 {% endblock monespace %}
 
 {% block javascripts %}
     {{ parent() }}
+
     <script>
         $(document).ready(function () {
             // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
             var $container = $('div#lsi_marketbundle_epci_codePostal');
+
+            $container.attr('data-prototype')
+                .replace(/__name__label__/g, 'Code postal')
+                .replace(/__name__/g)
+            ;
 
             // On définit un compteur unique pour nommer les champs qu'on va ajouter dynamiquement
             var index = $container.find(':input').length;
@@ -22,40 +28,40 @@
             });
 
             // On ajoute automatiquement le 1er champ sans le bouton de suppression
-            if ( index == 0 ){
+            /*if ( index == 0 ){
                 addCodePostal($container);
             }else{
                 // S'il existe déjà des champs de codes
                 $container.children('div').each(function () {
                     addDeleteLink($(this));
                 });
-            }
+            }*/
 
             // Fonction pour ajouter un formulaire de code postal
             function addCodePostal($container) {
                 var template;
 
-                if (index == 0){
+                //if (index == 0){
                     template = $container.attr('data-prototype')
-                        .replace(/__name__label__/g, 'Code postal')
+                        .replace(/__name__label__/g, 'Code postal '+ (index + 1))
                         .replace(/__name__/g, index)
                     ;
-                }else{
+                /*}else{
                     template = $container.attr('data-prototype')
-                        .replace(/__name__label__/g, 'Code postal '+ (index +1))
-                        .replace(/__name__/g, index)
+                        .replace(/__name__label__/g, 'Code postal ')
+                        .replace(/__name__/g, 'Code postal')
                     ;
-                }
+                }*/
 
                 // On crée un objet jquery qui contiendra le template
                 var $prototype = $(template);
 
                 // On ajoute au prototype un lien pour pouvoir supprimer le code postal
-                if(index == 0){
+                /*if(index == 0){
 
-                }else{
+                }else{*/
                     addDeleteLink($prototype);
-                }
+                //}
 
                 // On ajoute le prototype modifié à la fin de la balise <div>
                 $container.append($prototype);
@@ -63,7 +69,7 @@
                 // On incrémente l'index
                 index++;
             }
-            
+
             // La fonction pour supprimer un code postal
             function addDeleteLink($prototype) {
                 // Création du bouton
