--- a/src/LSI/MarketBundle/Resources/views/layout_admin.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/layout_admin.html.twig
@@ -1,7 +1,7 @@
 
 {% block admin %}
     <div class="" style="height: 100%;">
-        <nav class="navbar navbar-default" >
+        <nav class="navbar navbar-inverse" >
             <div class="container-fluid">
                 <div class="navbar navbar-fixed-left">
                     <p class="navbar-brand">ADMINISTRATION</p>
@@ -9,6 +9,7 @@
                 <div id="accordion">
                     <ul class="nav nav-pills nav-stacked">
                         <li><a href="{{ path('fos_user_profile_show') }}">Profil</a></li>
+                        {# Gestion des EPCI #}
                         <div class="card">
                             <div class="card-header nav" id="headingOne">
                                 <h5 class="mb-0">
@@ -22,6 +23,40 @@
                                 <div class="card-body nav">
                                     <li><a href="{{ path('ls_imarket_ajout_epci') }}">Ajouter un EPCI</a></li>
                                     <li><a href="{{ path('ls_imarket_liste_epci') }}">Consulter les EPCI</a></li>
+                                </div>
+                            </div>
+                        </div>
+                        {# Gestion des CGU #}
+                        <div class="card">
+                            <div class="card-header nav" id="headingTwo">
+                                <h5 class="mb-0">
+                                    <li><a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                                           aria-expanded="false" aria-controls="collapseTwo" role="button">
+                                            Edition des CGUs
+                                        </a></li>
+                                </h5>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                                <div class="card-body nav">
+                                    <li><a href="{{ path('ls_imarket_ajouter_cgu') }}">Ajouter les CGU</a></li>
+                                    <li><a href="{{ path('ls_imarket_voir_cgu') }}">Consulter les CGU</a></li>
+                                </div>
+                            </div>
+                        </div>
+                        {# Gestion des CGV #}
+                        <div class="card">
+                            <div class="card-header nav" id="headingThree">
+                                <h5 class="mb-0">
+                                    <li><a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+                                           aria-expanded="false" aria-controls="collapseThree" role="button">
+                                            Edition des CGVs
+                                        </a></li>
+                                </h5>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                <div class="card-body nav">
+                                    <li><a href="{{ path('ls_imarket_ajouter_cgv') }}">Ajouter les CGV</a></li>
+                                    <li><a href="{{ path('ls_imarket_voir_cgv') }}">Consulter les CGV</a></li>
                                 </div>
                             </div>
                         </div>
