--- a/src/LSI/MarketBundle/Resources/views/layout_mairie.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/layout_mairie.html.twig
@@ -24,15 +24,15 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card-header nav" id="headingOne">
+                            <div class="card-header nav" id="headingTwo">
                                 <h5 class="mb-0">
-                                    <li><a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne"
-                                           aria-expanded="false" aria-controls="collapseOne" role="button">
+                                    <li><a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                                           aria-expanded="false" aria-controls="collapseTwo" role="button">
                                             Espace demandeur
                                         </a></li>
                                 </h5>
                             </div>
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                 <div class="card-body nav">
                                     <li><a href="{#{{ path('#') }}#}">Mes réservations</a></li>
                                     <li><a href="#">Consulter</a></li>
