--- a/src/LSI/MarketBundle/Resources/views/reservation/mesreservations.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/reservation/mesreservations.html.twig
@@ -1,4 +1,4 @@
-{% extends 'LSIMarketBundle::layout_mon_espace.html.twig' %}
+{% extends 'LSIMarketBundle::monespace.html.twig' %}
 
 {% block title %}
     Mes reservations - {{ parent() }}
@@ -32,7 +32,13 @@
                         <td>Les actions</td>
                     </tr>
                 {% else %}
-                    <tr class="info"><strong>Vous n'avez pas de reservation !</strong></tr>
+                    <tr class="info">
+                        <td colspan="6">
+                            <center>
+                                <strong>Vous n'avez pas de reservation !</strong>
+                            </center>
+                        </td>
+                    </tr>
                 {% endfor %}
                 </tbody>
             </table>
