--- a/src/LSI/MarketBundle/Resources/views/market/dupliquer2.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/market/dupliquer2.html.twig
@@ -8,7 +8,7 @@
 
     <div id="page" class="row">
         <div class="">
-            <h2>Ajout d'une annonce</h2>
+            <h2>Création d'une annonce</h2>
             <h3> Gestions des disponibilités </h3>
             {{ form_start(form, {'attr' : {'claas' : 'form-control', 'novalidate':'novalidate'}}) }}
             <div class="col-xs-6 col-md-6 col-lg-4">
