--- a/src/LSI/MarketBundle/Resources/views/admin/gestion_cgu_cgv/cgv_voir.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/admin/gestion_cgu_cgv/cgv_voir.html.twig
@@ -6,8 +6,12 @@
         <p class="alert alert-info">{{ flash }}</p>
     {% endfor %}
     <center><strong><h2>CONDITIONS GENERALES DE VENTES</h2></strong></center>
-    <div style="overflow: scroll; height: 500px; background-color: white; padding-left: 10px;">
-        {{ cgv.cgv|raw }}
+    <div>
+
+        <embed src="http://docs.google.com/gview?url={{ asset(cgv.webPath) }}&embedded=true" width="970" height="500" ></embed>
+        {#<img src='{{ asset(cgu.webPath) }}' width='800' height='500' type='application/pdf'/>#}
+        {#<embed src='{{ asset(cgu.webPath) }}' width='800' height='500' type='application/pdf'/>#}
+        {#<object data="{{ asset(cgu.webPath) }}" width="800" height="500" type="application/pdf"/>#}
     </div>
     <div class="row">
         <div class="form-group">
