--- a/src/LSI/MarketBundle/Resources/views/layout_mairie.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/layout_mairie.html.twig
@@ -18,7 +18,7 @@
                             </div>
                             <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                 <div class="card-body nav">
-                                    <li><a href="{#{{ path('#') }}#}">Mes annonces</a></li>
+                                    <li><a href="{{ path('ls_imarket_mes_annonces') }}">Mes annonces</a></li>
                                     <li><a href="#">Consulter</a></li>
                                 </div>
                             </div>
