--- a/src/LSI/MarketBundle/Resources/views/admin/gestion_cgu_cgv/cgu_aj_content.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/admin/gestion_cgu_cgv/cgu_aj_content.html.twig
@@ -1,12 +1,16 @@
 <body>
     <div class="well">
-        <center><strong><h2>REDACTION DES CGU</h2></strong></center>
+        <center><strong><h2>AJOUT DES CONDITIONS D'UTILISATIONS</h2></strong></center>
         {{ form_start(form) }}
         <div class="form-group">
-            {{ form_row(form.cgu) }}
+            {{ form_label(form.fichier, 'Uploader le fichier de CGU') }}
+            {{ form_errors(form.fichier) }}
+            {{ form_widget(form.fichier) }}
         </div>
+
+        {# Button d'ajout du fichier de CGU #}
         <div class="form-group">
-            <center>{{ form_widget(form.save, {'label': 'Enregistrer', 'attr': {'class': 'btn btn-success'}}) }}</center>
+            <center>{{ form_widget(form.add, {'label': 'Enregistrer', 'attr': {'class': 'btn btn-success'}}) }}</center>
         </div>
         {{ form_end(form) }}
     </div>
