traitement de la messagerie au niveau de la mairie et la reservation

--- a/src/LSI/MarketBundle/Resources/views/layout_administre.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/layout_administre.html.twig
@@ -22,6 +22,7 @@
                                     <li><a href="#">Mes commandes</a></li>
                                     <li><a href="#">Mes paiements</a></li>
                                     <li><a href="#">Mes profil</a></li>
+                                    <li><a href="{{ path('ls_imarket_traitement_msgrecu') }}">Messagerie</a></li>
                                 </div>
                             </div>
                         </div>
