--- a/src/LSI/MarketBundle/Resources/views/reservation/reserver.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/reservation/reserver.html.twig
@@ -10,6 +10,8 @@
 
         {{ form_row(form.finPrestation) }}
 
+        {{  form_row(form.adresseReserve) }}
+
         {{ form_widget(form.save, {'attr' : {'class' : 'btn btn-success'}}) }}
 
         {{ form_end(form) }}
