--- a/src/LSI/MarketBundle/Resources/views/mairie/annonce_reserver.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/mairie/annonce_reserver.html.twig
@@ -1,4 +1,4 @@
-{% extends 'LSIMarketBundle::layout_mon_espace.html.twig' %}
+{% extends 'LSIMarketBundle::monespace.html.twig' %}
 
 {% block title %}
     Reservation sur mes annonces - {{ parent() }}
@@ -27,10 +27,17 @@
                         <td>Titre de l'annonce</td>
                         <td><strong>{{ annonceR.debutPrestation|date('d/m/Y') }}</strong></td>
                         <td><strong>{{ annonceR.finPrestation|date('d/m/Y') }}</strong></td>
-                        {% if annonceR.reserveEtat == 'A' %}
-                            <td><strong>En attente de validation de votre part</strong></td>
+                        {% if annonceR.reserveEtat == 'R' %}
+                            <td><strong>Annonce refusée</strong></td>
+                        {% elseif annonceR.reserveEtat == 'V' %}
+                            <td><strong>Annonce a été validée</strong></td>
+                        {% else %}
+                            <td><strong>Annonce en attente de validation</strong></td>
                         {% endif %}
-                        <td>Les actions</td>
+                        <td>
+                            {#Creation d'un bouton pour consulter les réservations#}
+                            <a href="{{ path('ls_imarket_voir_reservation', {'id': annonceR.id}) }}" class="btn btn-success" style="font-weight: bold">Consulter</a>
+                        </td>
                     </tr>
                 {% else %}
                     <p><strong>Vous n'avez de reservation sur aucune de vos annonces!</strong></p>
