--- a/src/LSI/MarketBundle/Resources/views/reservation/pagetraitementreservationdemandeur.html.twig
+++ b/src/LSI/MarketBundle/Resources/views/reservation/pagetraitementreservationdemandeur.html.twig
@@ -9,8 +9,10 @@
         {% for listreservation in listreservation %}
             <div class="row">
                 <div class="col-lg-12" style="text-align: center">
-                    <img src="{{ asset(listreservation.annonce.images.webPath) }}" alt="{{ listreservation.annonce.images.alt }}"
+                    {% for listancreserve in listreservation.annonce.images %}
+                    <img src="{{ asset(listancreserve.webPath) }}" alt="{{ listancreserve.alt }}"
                          style="width: 500px; height: 500px"/>
+                    {% endfor %}
                     <h3>{{ listreservation.annonce.titre }}</h3>
                     <h3>{{ listreservation.annonce.prixDefaut }}</h3>
                     <h3>{{ listreservation.annonce.categorie.name }}</h3>
@@ -20,7 +22,6 @@
                         {{ listreservation.reserveEtat }}
                     </h3>
                     <h3>{{ listreservation.user.nom }}</h3>
-                    <h3>{{ listreservation.user.adresse }}</h3>
                     <h3>{{ listreservation.user.telephone }}</h3>
                     <div>
                         {% if listreservation.reserveEtat == "R"  %}
@@ -54,9 +55,9 @@
                             <span>
                                 <a href="{{ path('ls_imarket_traitement_demandeur_modifierreserv', {'id': listreservation.id }) }}" type="submit" class="btn btn-success" value="modifier" name="btn-modifier" id="modifier">Modifier</a>
                             </span>
-                            <span>
+                           {# <span>
                                 <button type="submit" class="btn btn-success" value="payer" name="btn-payer" id="payer">Payer</button>
-                            </span>
+                            </span>#}
                         {% endif %}
                     </div>
                 </div>
